# isp-manajemen-system

./: .env.example  .gitignore  AGENTS.md  CODEX_HANDOFF_CHATBOT_ISP.md  DB.md  README.md  entities.sql  entity_keywords.sql  init_sqlite.sh  intent_mapping.json  intents.sql  keywords.sql  languages.sql  normalization_rules.sql  sample_utterances.sql  start.sh
apps/backend/: .env.example  README.md  pyproject.toml  railway.toml
apps/backend/app/: main.py
apps/backend/app/api/: router.py  sqlite_explorer.py  webhooks.py
apps/backend/app/cli/: send_whatsapp.py
apps/backend/app/core/: config.py
apps/backend/app/services/: chat_store.py  chatbot.py  dashboard_auth.py  google_sheets.py  sqlite_explorer.py
apps/frontend/: app.js  index.html  styles.css
backend/: README.md  pyproject.toml  railway.toml  requirements.txt
backend/app/: main.py
backend/app/api/: chat.py  client_dashboard.py  registrations.py  router.py  sqlite_explorer.py  webhooks.py
backend/app/auth/: __init__.py  guards.py  roles.py  routes.py
backend/docs/: native-llm-memory.md
backend/tests/: test_chat_store_packages.py  test_client_dashboard.py  test_dashboard_boundaries.py  test_isp_agent.py  test_llm_orchestration.py  test_openai_learning.py  test_provider_dry_run.py
docs/: dashboard-separation-inventory.md  dashboard-separation-migration.md  provider-chat-test-lab.md
frontend/: app.js  index.html  login.html  payment.html  payment.js  registration.css  registration.html  registration.js  sqlexplorer.css  sqlexplorer.html  sqlexplorer.js  styles.css  unauthorized.html
(+36 files in other folders)
