[project]
name = "isp-manajemen-backend"
version = "0.1.0"
description = "Starter backend module for ISP Manajemen System"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0,<1.0.0",
    "uvicorn[standard]>=0.30.0,<1.0.0",
    "python-dotenv>=1.0.1,<2.0.0",
    "google-api-python-client>=2.154.0,<3.0.0",
    "google-auth>=2.37.0,<3.0.0",
]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
include = ["app*"]

[tool.setuptools.package-data]
app = ["frontend/*.html", "frontend/*.js", "frontend/*.css"]
